Some fixes:
* Fixed overlaping of Error and OK Icons
* Fixed blur not hide when error
* Add fatal error when configuration not found

--- a/template/style.css
+++ b/template/style.css
@@ -87,9 +87,10 @@ body {
   display:block
 }
 
-.message {
+#message {
   /*text-align: justify;*/
   display: none;
+  margin-bottom: 40px;
 }
 
 #fade {
